--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <section class="bio">
             <div class="profile-image-container">
-                <img src="/Users/giorgiopeluso/Desktop/g.png" alt="Your Profile Picture" class="profile-image">
+                <img src="g.png" alt="Your Profile Picture" class="profile-image">
             </div>
             <h1>Giorgio</h1>
             <p>Hi nerds.</p>
