--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
             </ul>
         </section>
     </div>
+    <section class="discord-widget">
+    <h2>Discord Server</h2>
+    <iframe src="https://discord.com/widget?id=1350516845203030087&theme=dark" width="300" height="350" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</section>
 </body>
 </html>
