--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
             </ul>
         </section>
     </div>
+    <div class="audio-player">
+    <audio id="background-audio" loop controls>
+        <source src="two.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+</div>
 </body>
 </html>
