--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         </section>
     </div>
     <div class="audio-player">
-    <audio id="background-audio" loop controls>
+    <audio id="background-audio" loop autoplay muted>
         <source src="two.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+</div>
 </div>
 </body>
 </html>
