--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
     </div>
     <div class="audio-player">
-    <audio id="background-audio" loop autoplay muted>
+    <audio id="background-audio" loop autoplay>
         <source src="two.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
